update from server

--- a/assets/demo/восьмеричн_suttanta_ru.html
+++ b/assets/demo/восьмеричн_suttanta_ru.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Восьмеричн 139 texts and 279 matches in Suttanta Russian</title>
+    <title>Восьмеричн 139 texts and 273 matches in Suttanta Russian</title>
 	<link rel="icon" type="image/png" href="https://find.dhamma.gift/assets/favico-noglass.png" />
  
 <meta property="og:type" content="article" />
-<meta property="og:title" content="Восьмеричн 139 texts and 279 matches in Suttanta Russian - find.Dhamma.gift" />
-<meta property="og:description" content="Восьмеричн 139 texts and 279 matches in Suttanta Russian - find.Dhamma.gift" />
+<meta property="og:title" content="Восьмеричн 139 texts and 273 matches in Suttanta Russian - find.Dhamma.gift" />
+<meta property="og:description" content="Восьмеричн 139 texts and 273 matches in Suttanta Russian - find.Dhamma.gift" />
 
-<meta name="twitter:title" content="Восьмеричн 139 texts and 279 matches in Suttanta Russian - find.Dhamma.gift">
-<meta name="twitter:description" content="Восьмеричн 139 texts and 279 matches in Suttanta Russian - find.Dhamma.gift">
+<meta name="twitter:title" content="Восьмеричн 139 texts and 273 matches in Suttanta Russian - find.Dhamma.gift">
+<meta name="twitter:description" content="Восьмеричн 139 texts and 273 matches in Suttanta Russian - find.Dhamma.gift">
 <meta property="og:image" itemprop="image" content="" />
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -36,7 +36,7 @@
 
 </head>
 <body><div class="container-fluid mt-2">    
-    <h3 class="pl-2 ml-2">Восьмеричн 139 texts and 279 matches in Suttanta Russian</h3>
+    <h3 class="pl-2 ml-2">Восьмеричн 139 texts and 273 matches in Suttanta Russian</h3>
     <button id="btn-hide-all-children" class="btn btn-light" type="button">Saṁvaṭṭo</button>    
 <button id="btn-show-all-children" class="btn btn-light" type="button">Vivaṭṭo</button>
 <hr>
@@ -353,19 +353,19 @@
 </tr>
 <tr>
 <td><a target="_blank" href=https://suttacentral.net/mn3>mn3</a></td>
-<td><strong>Dhammadāyādasutta</strong>. Духовное наследство </td>
+<td><strong>Dhammadāyādasutta</strong>. Наследники в Дхамме </td>
 <td><b>восьмеричн</b>ый</td>
 <td>2</td>   
-<td>10</td>
+<td>1</td>
 <td><a target="_blank" href=https://find.dhamma.gift/sc/?q=mn3&lang=pli>Pāḷi</a>&nbsp;<a target="_blank" href=https://www.theravada.ru/Teaching/Canon/Suttanta/Texts/mn3-dhammadayada-sutta-sv.htm>Русский</a> <a target=_blank href=https://suttacentral.net/mn3/th/siam_rath>ไทย</a>&nbsp;<a target="_blank" href=https://find.dhamma.gift/sc/?q=mn3&lang=eng>English</a></td>
 <td>
 
 <br class="styled">
-И что, братья, это за Срединный Путь, дающий ви́дение, дающий мудрость, ведущий к покою, к непосредственному знанию, к пробуждению, к ниббане. Вот этот самый <b>Восьмеричн</b>ый Благородный Путь, а именно правильное воззрение, правильное намерение, правильная речь, правильное поведение, правильные средства к существованию, правильное усилие, правильное памятование, правильное сосредоточение. Это и есть тот самый Срединный Путь, дающий ви́дение, дающий знание, ведущий к покою, к непосредственному знанию, к пробуждению, к ниббане.
+Друзья, порочное здесь—это жажда и злоба. Существует Срединный Путь для оставления жажды и злобы, который даёт видение, даёт знание, ведёт к покою, к прямому знанию, к просветлению, к ниббане. И что это за Срединный Путь? Это этот самый Благородный <b>Восьмеричн</b>ый Путь, то есть:
 <br class="styled">
 
 <br class="styled">
-И что, братья, это за Срединный Путь, дающий ви́дение, дающий мудрость, ведущий к покою, к непосредственному знанию, к пробуждению, к ниббане. Вот этот самый <b>Восьмеричн</b>ый Благородный Путь, а именно правильное воззрение, правильное намерение, правильная речь, правильное поведение, правильные средства к существованию, правильное усилие, правильное памятование, правильное сосредоточение. Это и есть тот самый Срединный Путь, дающий ви́дение, дающий знание, ведущий к покою, к непосредственному знанию, к пробуждению, к ниббане.
+Существует Срединный Путь для оставления тщеславия и небрежности, который даёт видение… Это этот самый Благородный <b>Восьмеричн</b>ый Путь… Таков Срединный Путь для оставления тщеславия и небрежности, который даёт видение, даёт знание, ведёт к покою, к прямому знанию, к просветлению, к ниббане».
 <br class="styled">
 </td>
 </tr>
@@ -1037,7 +1037,7 @@
 </tr>
 <tr>
 <td><a target="_blank" href=https://suttacentral.net/sn38.1>sn38.1</a></td>
-<td><strong>Nibbānapañhāsutta</strong>1. Вопрос о наводнениях </td>
+<td><strong>Nibbānapañhāsutta</strong>. Вопрос о ниббане </td>
 <td><b>восьмеричн</b>ый</td>
 <td>1</td>   
 <td>0</td>
@@ -1045,7 +1045,7 @@
 <td>
 
 <br class="styled">
-«Существует путь, друг… Это этот самый Благородный <b>Восьмеричн</b>ый Путь…»
+«Это, друг, этот самый Благородный <b>Восьмеричн</b>ый Путь, то есть:
 <br class="styled">
 </td>
 </tr>
@@ -1297,19 +1297,23 @@
 </tr>
 <tr>
 <td><a target="_blank" href=https://suttacentral.net/sn45.3>sn45.3</a></td>
-<td><strong>Sāriputtasutta</strong>0. Уттия </td>
+<td><strong>Sāriputtasutta</strong>. Сарипутта </td>
 <td><b>восьмеричн</b>ый</td>
-<td>2</td>   
+<td>3</td>   
 <td>0</td>
 <td><a target="_blank" href=https://find.dhamma.gift/sc/?q=sn45.3&lang=pli>Pāḷi</a>&nbsp;<a target="_blank" href=https://www.theravada.ru/Teaching/Canon/Suttanta/Texts/sn45_3-sariputta-sutta-sv.htm>Русский</a> <a target=_blank href=https://suttacentral.net/sn45.3/th/siam_rath>ไทย</a>&nbsp;<a target="_blank" href=https://find.dhamma.gift/sc/?q=sn45.3&lang=eng>English</a></td>
 <td>
 
 <br class="styled">
-Об этих пяти нитях чувственных удовольствий я говорил. Благородный <b>Восьмеричн</b>ый Путь, Уттия, следует развивать ради оставления этих пяти нитей чувственных удовольствий. Этот путь таков:
+«Хорошо, хорошо, Сарипутта! Такова вся святая жизнь целиком, Сарипутта, то есть, хорошие друзья, хорошие спутники, хорошие товарищи. Когда у монаха есть хороший друг, хороший спутник, хороший товарищ, то можно ожидать, что он разовьёт и взрастит Благородный <b>Восьмеричн</b>ый Путь.
 <br class="styled">
 
 <br class="styled">
-Этот Благородный <b>Восьмеричн</b>ый Путь следует развивать ради оставления этих пяти нитей чувственных удовольствий».
+И как, Сарипутта, монах, у которого хороший друг, хороший спутник, хороший товарищ, развивает и взращивает Благородный <b>Восьмеричн</b>ый Путь? Вот, Сарипутта, монах развивает правильные воззрения, которые основаны на отречении, бесстрастии, прекращении и созревают в освобождении. Он развивает правильное устремление… правильную речь… правильные действия… правильные средства к жизни… правильное усилие… правильную осознанность… правильное сосредоточение, которое основано на отречении, бесстрастии, прекращении и созревает в освобождении.
+<br class="styled">
+
+<br class="styled">
+Вот так, Сарипутта, этот монах, у которого есть хороший друг, хороший спутник, хороший товарищ, развивает и взращивает Благородный <b>Восьмеричн</b>ый Путь.
 <br class="styled">
 </td>
 </tr>
@@ -1333,79 +1337,67 @@
 </tr>
 <tr>
 <td><a target="_blank" href=https://suttacentral.net/sn45.5>sn45.5</a></td>
-<td><strong>Kimatthiyasutta</strong>0–54 </td>
-<td><b>восьмеричн</b>ого <b>восьмеричн</b>ый</td>
-<td>4</td>   
+<td><strong>Kimatthiyasutta</strong>. Ради чего? </td>
+<td><b>восьмеричн</b>ый</td>
+<td>1</td>   
 <td>0</td>
 <td><a target="_blank" href=https://find.dhamma.gift/sc/?q=sn45.5&lang=pli>Pāḷi</a>&nbsp;<a target="_blank" href=https://www.theravada.ru/Teaching/Canon/Suttanta/Texts/sn45_5-kimatthiya-sutta-sv.htm>Русский</a> <a target=_blank href=https://suttacentral.net/sn45.5/th/siam_rath>ไทย</a>&nbsp;<a target="_blank" href=https://find.dhamma.gift/sc/?q=sn45.5&lang=eng>English</a></td>
 <td>
 
 <br class="styled">
-В Саваттхи. «Монахи, такова предтеча, таков предвестник восхождения солнца, то есть, рассвет. Точно также, монахи, у монаха это является предтечей, предвестником возникновения Благородного <b>Восьмеричн</b>ого Пути, то есть, реализация нравственности. Когда монах достиг реализации нравственности, то можно ожидать, что он разовьёт и взрастит этот Благородный <b>Восьмеричн</b>ый Путь.
-<br class="styled">
-
-<br class="styled">
-И каким образом монах, добившийся реализации нравственности, развивает и взращивает Благородный <b>Восьмеричн</b>ый Путь?
-<br class="styled">
-
-<br class="styled">
-Вот так, монахи, монах, добившийся реализации нравственности, развивает и взращивает Благородный <b>Восьмеричн</b>ый Путь».
+Если, монахи, странники-приверженцы других учений спросят вас: «Но, друзья, существует ли путь, есть ли метод, ведущий к полному пониманию этих страданий?» то, будучи спрошенными так, вам следует ответить им: «Существует путь, друзья, есть метод, ведущий к полному пониманию этих страданий». И каков, монахи, этот путь, каков этот метод, ведущий к полному пониманию этих страданий? Это этот самый Благородный <b>Восьмеричн</b>ый Путь:
 <br class="styled">
 </td>
 </tr>
 <tr>
 <td><a target="_blank" href=https://suttacentral.net/sn45.6>sn45.6</a></td>
-<td><strong>Paṭhamaaññatarabhikkhusutta</strong>3. Хороший друг </td>
-<td><b>восьмеричн</b>ого <b>восьмеричн</b>ый</td>
-<td>4</td>   
+<td><strong>Paṭhamaaññatarabhikkhusutta</strong>. Один монах (I) </td>
+<td><b>восьмеричн</b>ый</td>
+<td>1</td>   
 <td>0</td>
 <td><a target="_blank" href=https://find.dhamma.gift/sc/?q=sn45.6&lang=pli>Pāḷi</a>&nbsp;<a target="_blank" href=https://www.theravada.ru/Teaching/Canon/Suttanta/Texts/sn45_6-pathama-anyatara-bhikkhu-sutta-sv.htm>Русский</a> <a target=_blank href=https://suttacentral.net/sn45.6/th/siam_rath>ไทย</a>&nbsp;<a target="_blank" href=https://find.dhamma.gift/sc/?q=sn45.6&lang=eng>English</a></td>
 <td>
 
 <br class="styled">
-В Саваттхи. «Монахи, эта одна вещь крайне полезна для возникновения Благородного <b>Восьмеричн</b>ого Пути. Какая одна вещь? Хорошие друзья. Когда у монаха есть хороший друг, то можно ожидать, что он разовьёт и взрастит Благородный <b>Восьмеричн</b>ый Путь.
-<br class="styled">
-
-<br class="styled">
-И каким образом монах, у которого есть хороший друг, развивает и взращивает Благородный <b>Восьмеричн</b>ый Путь?
-<br class="styled">
-
-<br class="styled">
-Вот так, монахи, монах, у которого есть хороший друг, развивает и взращивает Благородный <b>Восьмеричн</b>ый Путь».
+«Этот самый Благородный <b>Восьмеричн</b>ый Путь, монах, является святой жизнью, то есть правильные воззрения… устремление… речь… действия… средства к жизни… усилие… осознанность… сосредоточение. Уничтожение жажды, уничтожение злобы, уничтожение заблуждения—вот какова конечная цель святой жизни».
 <br class="styled">
 </td>
 </tr>
 <tr>
 <td><a target="_blank" href=https://suttacentral.net/sn45.7>sn45.7</a></td>
-<td><strong>Dutiyaaññatarabhikkhusutta</strong>7–90 </td>
+<td><strong>Dutiyaaññatarabhikkhusutta</strong>. Один монах (II) </td>
 <td><b>восьмеричн</b>ый</td>
-<td>2</td>   
-<td>0</td>
+<td>1</td>   
+<td>2</td>
 <td><a target="_blank" href=https://find.dhamma.gift/sc/?q=sn45.7&lang=pli>Pāḷi</a>&nbsp;<a target="_blank" href=https://www.theravada.ru/Teaching/Canon/Suttanta/Texts/sn45_7-dutiya-anyatara-bhikkhu-sutta-sv.htm>Русский</a> <a target=_blank href=https://suttacentral.net/sn45.7/th/siam_rath>ไทย</a>&nbsp;<a target="_blank" href=https://find.dhamma.gift/sc/?q=sn45.7&lang=eng>English</a></td>
 <td>
 
 <br class="styled">
-Благословенный сказал: «Монахи, я не вижу ни одной другой столь эффективной вещи, посредством которой возникал бы невозникший Благородный <b>Восьмеричн</b>ый Путь, а возникший Благородный <b>Восьмеричн</b>ый Путь полностью бы развивался…»
+«Уничтожение жажды, уничтожение злобы, уничтожение заблуждения—вот что называется Бессмертным. Этот самый Благородный <b>Восьмеричн</b>ый Путь является путём, ведущим к Бессмертному, то есть:
 <br class="styled">
 </td>
 </tr>
 <tr>
 <td><a target="_blank" href=https://suttacentral.net/sn45.8>sn45.8</a></td>
-<td><strong>Vibhaṅgasutta</strong>45.77–90 </td>
-<td><b>восьмеричн</b>ый</td>
+<td><strong>Vibhaṅgasutta</strong>. Анализ </td>
+<td><b>восьмеричн</b>ому <b>восьмеричн</b>ый</td>
 <td>2</td>   
 <td>0</td>
 <td><a target="_blank" href=https://find.dhamma.gift/sc/?q=sn45.8&lang=pli>Pāḷi</a>&nbsp;<a target="_blank" href=https://www.theravada.ru/Teaching/Canon/Suttanta/Texts/sn45_8-magga-vibhanga-sutta-sv.htm>Русский</a> <a target=_blank href=https://suttacentral.net/sn45.8/th/siam_rath>ไทย</a>&nbsp;<a target="_blank" href=https://find.dhamma.gift/sc/?q=sn45.8&lang=eng>English</a></td>
 <td>
 
 <br class="styled">
-Благословенный сказал: «Монахи, я не вижу ни одной другой столь эффективной вещи, посредством которой возникал бы невозникший Благородный <b>Восьмеричн</b>ый Путь, а возникший Благородный <b>Восьмеричн</b>ый Путь полностью бы развивался…»
+В Саваттхи. «Монахи, я научу вас Благородному <b>Восьмеричн</b>ому Пути и разъясню его вам. Слушайте внимательно, я буду говорить».
+<br class="styled">
+
+<br class="styled">
+«Да, Учитель»—ответили те монахи. Благословенный сказал: «И что такое, монахи, Благородный <b>Восьмеричн</b>ый Путь? Это:
 <br class="styled">
 </td>
 </tr>
 <tr>
 <td><a target="_blank" href=https://suttacentral.net/sn45.18>sn45.18</a></td>
-<td><strong>Paṭhamakukkuṭārāmasutta</strong>0. Пять высших оков </td>
+<td><strong>Paṭhamakukkuṭārāmasutta</strong>. Петушиный парк (I) </td>
 <td><b>восьмеричн</b>ый</td>
 <td>1</td>   
 <td>0</td>
@@ -1413,7 +1405,7 @@
 <td>
 
 <br class="styled">
-Таковы пять высших оков. Этот Благородный <b>Восьмеричн</b>ый Путь следует развивать ради прямого знания этих пяти высших оков, ради полного их понимания, ради полного их уничтожения, ради полного их отбрасывания…
+«Этот самый <b>восьмеричн</b>ый неправильный путь, друг, является нечестивой жизнью, то есть неправильные воззрения… устремление… речь… действия… средства к жизни… усилие… осознанность… неправильное сосредоточение».
 <br class="styled">
 </td>
 </tr>
