update from server

--- a/assets/demo/kata.dukkhaṁ-question_suttanta_pali.html
+++ b/assets/demo/kata.dukkhaṁ-question_suttanta_pali.html
@@ -37,7 +37,7 @@
 </head>
 <body><div class="container-fluid mt-2">    
     <h3 class="pl-2 ml-2">Kata.*dukkhaṁ? 3 texts and 5 matches in Suttanta Pali</h3>
-    <button id="btn-hide-all-children" class="btn btn-light" type="button">Saṁvaṭṭo</button>    
+    <button id="btn-hide-all-children" class="btn btn-light" type="button">Saṁvaṭṭo</button>
 <button id="btn-show-all-children" class="btn btn-light" type="button">Vivaṭṭo</button>
 <hr>
 <table id="pali" class="display table table table-striped table-hover table-responsive " cellspacing="0" width="100%">
@@ -47,8 +47,8 @@
             <th>Title</th>
             <th>Words</th>
             <th>Count</th>
-            <th>Metaphors</th>
-            <th>Full texts</th>
+            <th>Mtphr</th>
+            <th>Links</th>
             <th class="none">Quote</th>
 
         </tr>
@@ -60,15 +60,25 @@
 <td>2</td>   
 <td>7</td>
 <td><a target="_blank" href=https://find.dhamma.gift/sc/?q=dn22&lang=pli>Pāḷi</a> 
-<a target=_blank href=https://tipitaka.theravada.su/toc/translations/1361>Русский</a> 
+<a target=_blank href=https://tipitaka.theravada.su/toc/translations/1361>Rus</a> 
  
-<a target=_blank href=https://suttacentral.net/dn22/th/siam_rath>ไทย</a> <a target="_blank" href=https://suttacentral.net/dn22/en/sujato?layout=linebyline>English</a></td>
+<a target=_blank href=https://suttacentral.net/dn22/th/siam_rath>ไทย</a> <a target="_blank" href=https://suttacentral.net/dn22/en/sujato?layout=linebyline>Eng</a> 
+<a target="_blank" href="https://voice.suttacentral.net/scv/index.html?#/sutta?search=dn22">mp3</a>
+</td>
 <td>
-<b>Katamañca, bhikkhave, dukkhaṁ</b>? <br class="btwntrn">
-<p class="text-muted font-weight-light">And what is pain? </p>
+<b>Katamañca, bhikkhave, dukkhaṁ</b>? 
+Yaṁ kho, bhikkhave, kāyikaṁ dukkhaṁ kāyikaṁ asātaṁ kāyasamphassajaṁ dukkhaṁ asātaṁ vedayitaṁ, 
+idaṁ vuccati, bhikkhave, dukkhaṁ. <br class="btwntrn">
+<p class="text-muted font-weight-light">And what is pain? 
+Physical pain, physical displeasure, the painful, unpleasant feeling that’s born from physical contact. 
+This is called pain. </p>
 <br class="styled">
-<b>Katamañca, bhikkhave, yampicchaṁ na labhati tampi dukkhaṁ</b>? <br class="btwntrn">
-<p class="text-muted font-weight-light">And what is meant by ‘not getting what you wish for is suffering’? </p>
+<b>Katamañca, bhikkhave, yampicchaṁ na labhati tampi dukkhaṁ</b>? 
+Jātidhammānaṁ, bhikkhave, sattānaṁ evaṁ icchā uppajjati: 
+‘aho vata mayaṁ na jātidhammā assāma, na ca vata no jāti āgaccheyyā’ti. <br class="btwntrn">
+<p class="text-muted font-weight-light">And what is meant by ‘not getting what you wish for is suffering’? 
+In sentient beings who are liable to be reborn, such a wish arises: 
+‘Oh, if only we were not liable to be reborn! If only rebirth would not come to us!’ </p>
 <br class="styled">
 </td>
 </tr>
@@ -79,15 +89,25 @@
 <td>2</td>   
 <td>2</td>
 <td><a target="_blank" href=https://find.dhamma.gift/sc/?q=mn141&lang=pli>Pāḷi</a> 
-<a target=_blank href=https://www.theravada.ru/Teaching/Canon/Suttanta/Texts/mn141-sacca-vibhanga-sutta-sv.htm>Русский</a> 
+<a target=_blank href=https://www.theravada.ru/Teaching/Canon/Suttanta/Texts/mn141-sacca-vibhanga-sutta-sv.htm>Rus</a> 
  
-<a target=_blank href=https://suttacentral.net/mn141/th/siam_rath>ไทย</a> <a target="_blank" href=https://suttacentral.net/mn141/en/sujato?layout=linebyline>English</a></td>
+<a target=_blank href=https://suttacentral.net/mn141/th/siam_rath>ไทย</a> <a target="_blank" href=https://suttacentral.net/mn141/en/sujato?layout=linebyline>Eng</a> 
+<a target="_blank" href="https://voice.suttacentral.net/scv/index.html?#/sutta?search=mn141">mp3</a>
+</td>
 <td>
-<b>Katamañcāvuso, dukkhaṁ</b>? <br class="btwntrn">
-<p class="text-muted font-weight-light">And what is pain? </p>
+<b>Katamañcāvuso, dukkhaṁ</b>? 
+Yaṁ kho, āvuso, kāyikaṁ dukkhaṁ kāyikaṁ asātaṁ kāyasamphassajaṁ dukkhaṁ asātaṁ vedayitaṁ, 
+idaṁ vuccatāvuso: ‘dukkhaṁ’. <br class="btwntrn">
+<p class="text-muted font-weight-light">And what is pain? 
+Physical pain, physical displeasure, the painful, unpleasant feeling that’s born from physical contact. 
+This is called pain. </p>
 <br class="styled">
-<b>Katamañcāvuso, yampicchaṁ na labhati tampi dukkhaṁ</b>? <br class="btwntrn">
-<p class="text-muted font-weight-light">And what is ‘not getting what you wish for is suffering’? </p>
+<b>Katamañcāvuso, yampicchaṁ na labhati tampi dukkhaṁ</b>? 
+Jātidhammānaṁ, āvuso, sattānaṁ evaṁ icchā uppajjati: 
+‘aho vata mayaṁ na jātidhammā assāma; na ca vata no jāti āgaccheyyā’ti. <br class="btwntrn">
+<p class="text-muted font-weight-light">And what is ‘not getting what you wish for is suffering’? 
+In sentient beings who are liable to be reborn, such a wish arises: 
+‘Oh, if only we were not liable to be reborn! If only rebirth would not come to us!’ </p>
 <br class="styled">
 </td>
 </tr>
@@ -98,19 +118,25 @@
 <td>1</td>   
 <td>0</td>
 <td><a target="_blank" href=https://find.dhamma.gift/sc/?q=sn22.104&lang=pli>Pāḷi</a> 
-<a target=_blank href=https://www.theravada.ru/Teaching/Canon/Suttanta/Texts/sn22_104-dukkha-sutta-sv.htm>Русский</a> 
+<a target=_blank href=https://www.theravada.ru/Teaching/Canon/Suttanta/Texts/sn22_104-dukkha-sutta-sv.htm>Rus</a> 
  
-<a target=_blank href=https://suttacentral.net/sn22.104/th/siam_rath>ไทย</a> <a target="_blank" href=https://suttacentral.net/sn22.104/en/sujato?layout=linebyline>English</a></td>
+<a target=_blank href=https://suttacentral.net/sn22.104/th/siam_rath>ไทย</a> <a target="_blank" href=https://suttacentral.net/sn22.104/en/sujato?layout=linebyline>Eng</a> 
+<a target="_blank" href="https://voice.suttacentral.net/scv/index.html?#/sutta?search=sn22.104">mp3</a>
+</td>
 <td>
-<b>Katamañca, bhikkhave, dukkhaṁ</b>? <br class="btwntrn">
-<p class="text-muted font-weight-light">And what is suffering? </p>
+<b>Katamañca, bhikkhave, dukkhaṁ</b>? 
+Pañcupādānakkhandhātissa vacanīyaṁ. 
+Katame pañca? <br class="btwntrn">
+<p class="text-muted font-weight-light">And what is suffering? 
+It should be said: the five grasping aggregates. 
+What five? </p>
 <br class="styled">
 </td>
 </tr>
 </tbody>
 </table>
 <a href=/>Main page</a>&nbsp;
-<a href=/output/kata.dukkhaṁ_question_suttanta_pali_words.html>Words</a>
+<a href=/output/kata.dukkhaṁ-question_suttanta_pali_words.html>Words</a>
 
 </div>
     <script type='text/javascript'>
