--- a/assets/demo/kata.dukkhaṁ-question_suttanta_pali_words.html
+++ b/assets/demo/kata.dukkhaṁ-question_suttanta_pali_words.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Search History</title>
+    <title>Kata.*dukkhaṁ? 0 related words in 3 texts and 5 matches in Suttanta Pali</title>
 	<link rel="icon" type="image/png" href="https://find.dhamma.gift/assets/favico-noglass.png" />
  
 <meta property="og:type" content="article" />
-<meta property="og:title" content="Search History - find.Dhamma.gift" />
-<meta property="og:description" content="Search History - find.Dhamma.gift" />
+<meta property="og:title" content="Kata.*dukkhaṁ? 0 related words in 3 texts and 5 matches in Suttanta Pali - find.Dhamma.gift" />
+<meta property="og:description" content="Kata.*dukkhaṁ? 0 related words in 3 texts and 5 matches in Suttanta Pali - find.Dhamma.gift" />
 
-<meta name="twitter:title" content="Search History - find.Dhamma.gift">
-<meta name="twitter:description" content="Search History - find.Dhamma.gift">
+<meta name="twitter:title" content="Kata.*dukkhaṁ? 0 related words in 3 texts and 5 matches in Suttanta Pali - find.Dhamma.gift">
+<meta name="twitter:description" content="Kata.*dukkhaṁ? 0 related words in 3 texts and 5 matches in Suttanta Pali - find.Dhamma.gift">
 <meta property="og:image" itemprop="image" content="" />
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -36,36 +36,24 @@
 
 </head>
 <body><div class="container-fluid mt-2">    
-    <h3 class="pl-2 ml-2">Search History</h3>
+    <h3 class="pl-2 ml-2">Kata.*dukkhaṁ? 0 related words in 3 texts and 5 matches in Suttanta Pali</h3>
     <button id="btn-hide-all-children" class="btn btn-light" type="button">Saṁvaṭṭo</button>    
 <button id="btn-show-all-children" class="btn btn-light" type="button">Vivaṭṭo</button>
 <hr>
 <table id="pali" class="display table table table-striped table-hover table-responsive " cellspacing="0" width="100%">
    <thead class="thead-light">
         <tr>
-            <th>Pattern</th>
-            <th>Language</th>
+            <th>Word</th>
             <th>Texts</th>
             <th>Matches</th>
-            <th>Pitaka</th>
-            <th>Size</th>
-            <th>Date</th>
+            <th></th>
         </tr>
     </thead>
-    <tbody>
-      <!-- class="none" --><tr>
-<td><a target="_blank" href=/output/search_engine.php>search</a>  
-</td>
-<td></td>
-<th></th>
-<th></th>
-<td>Engine.php</td>
-<td>1.1K</td>
-<td>02-11-2022</td>
-
-</tr>
+    <tbody></tbody>
 </table>
-<a href=/>Main page </a>
+<a href=/>Main page</a>&nbsp;
+<a href=/output/kata.dukkhaṁ-question_suttanta_pali.html>Quotes</a>
+
 </div>
     <script type='text/javascript'>
 $(document).ready(function (){
