--- a/sc/index.html
+++ b/sc/index.html
@@ -51,8 +51,8 @@
     </div>
     <div class="links-area" style="text-align: center;">
         <a href="https://find.dhamma.gift" title="Sutta and Vinaya search" rel="noreferrer"
-            ><img width="20px" alt="find.dhamma.gift icon" src="./images/favicon.png"></a>
-			
+            ><img width="20px" alt="find.dhamma.gift icon" src="/assets/gray.png"></a>
+       
 		<a href="http://readingfaithfully.org" title="Support for your sutta readng practice" rel="noreferrer"
             target="_blank"><img width="20px" alt="ReadingFaithfully.org icon" src="./images/favicon-rf-black.png"></a>
         <a href="http://daily.readingfaithfully.org" title="Daily Suttas" rel="noreferrer" target="_blank"><img
