update from server

--- a/scripts/scroll.html
+++ b/scripts/scroll.html
@@ -6,7 +6,7 @@
   <title>jQuery UI Autocomplete - Default functionality</title>
   
   <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
-   <link href="/css/extrastyles.css" rel="stylesheet" />
+   <link href="/assets/css/extrastyles.css" rel="stylesheet" />
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
   <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
 
