--- a/testtoc.html
+++ b/testtoc.html
@@ -23,8 +23,8 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 <link href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap5.min.css
 " rel="stylesheet" type="text/css" />
-<link href="/css/extrastyles.css" rel="stylesheet" />
-<link href="/css/table.css" rel="stylesheet" />
+<link href="/assets/css/extrastyles.css" rel="stylesheet" />
+<link href="/assets/css/table.css" rel="stylesheet" />
 
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
   
