--- a/assets/demo/нравственность_suttanta_ru.html
+++ b/assets/demo/нравственность_suttanta_ru.html
@@ -25,7 +25,7 @@
 <script type="text/javascript" src="https://cdn.datatables.net/plug-ins/1.12.1/sorting/natural.js"></script>
 
 <!-- <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
-<script src="/js/autopali.js"></script> -->
+<script src="/assets/js/autopali.js"></script> -->
 
 
 <link href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap5.min.css
