--- a/sc/index.html
+++ b/sc/index.html
@@ -53,11 +53,12 @@
     <div class="links-area" style="text-align: center;">
         <a href="https://find.dhamma.gift" title="Sutta and Vinaya search" rel="noreferrer"
             ><img width="20px" alt="find.dhamma.gift icon" src="/assets/gray.png"></a>
-       
-		<a href="http://readingfaithfully.org" title="Support for your sutta readng practice" rel="noreferrer"
-            target="_blank"><img width="20px" alt="ReadingFaithfully.org icon" src="./images/favicon-rf-black.png"></a>
-        <a href="http://daily.readingfaithfully.org" title="Daily Suttas" rel="noreferrer" target="_blank"><img
-                width="20px" alt="Daily ReadingFaithfully.org icon" src="./images/favicon-drf-black.png"></a>
+      
+
+<a href="/diff" title="Compare two suttas" rel="noreferrer"
+            ><img width="20px" alt="Diff icon" src="/sc/images/favicon-black.png"></a>
+
+ 
         <a href="http://r.readingfaithfully.org" title="Random Suttas" rel="noreferrer" target="_blank"><img
                 width="20px" alt="Random Sutta icon" src="./images/favicon-random-black.png"></a>
         <a href="https://sutta.readingfaithfully.org" title="Citation Lookup Tool" rel="noreferrer" target="_blank"><img
