--- a/sc/index.html
+++ b/sc/index.html
@@ -51,7 +51,7 @@
         <div id="next"></div>
     </div>
     <div class="links-area" style="text-align: center;">
-        <a href="https://find.dhamma.gift" title="Sutta and Vinaya search" rel="noreferrer"
+        <a href="../" title="Sutta and Vinaya search" rel="noreferrer"
             ><img width="20px" alt="find.dhamma.gift icon" src="/assets/gray.png"></a>
       
 
