--- a/diff/index.html
+++ b/diff/index.html
@@ -72,19 +72,18 @@
             ><img width="20px" alt="find.dhamma.gift icon" src="/assets/gray.png"></a>
       
 
-<a href="/diff" title="Compare two suttas" rel="noreferrer"
-            ><img width="20px" alt="Diff icon" src="/sc/images/favicon-black.png"></a>
+<a href="/sc/" title="SC Light" rel="noreferrer"
+            ><img width="20px" alt="Diff icon" src="/sc/images/favicon.png"></a>
 
- 
         <a href="http://r.readingfaithfully.org" title="Random Suttas" rel="noreferrer" target="_blank"><img
-                width="20px" alt="Random Sutta icon" src="/diff/images/favicon-random-black.png"></a>
+                width="20px" alt="Random Sutta icon" src="/sc/images/favicon-random-black.png"></a>
         <a href="https://sutta.readingfaithfully.org" title="Citation Lookup Tool" rel="noreferrer" target="_blank"><img
                 width="20px" src="/sc/images/favicon-citaton-helper-black.png" alt="Citation Lookup tool icon"></a>
         <a href="https://name.readingfaithfully.org" title="Search for suttas by name" rel="noreferrer"
             target="_blank"><img width="20px" src="/sc/images/favicon-name-black.png" alt="Sutta Name Search icon"></a>
         <a href="https://ped.readingfaithfully.org" title="A lightweight interface for the PED" rel="noreferrer"
             target="_blank"><img width="20px" src="/sc/images/favicon-ped-black.png"
-                alt="SuttaCentral.org Lightweight interface icon"></a>
+                alt="Lightweight interface icon"></a>
         <a href="https://dppn.readingfaithfully.org" title="A lightweight interface the Dictionary of Pali Proper Names"
             rel="noreferrer" target="_blank"><img width="20px" src="/sc/images/favicon-dppn-black.png"
                 alt="DPPN search icon"></a>
