update from server

--- a/diff/index.html
+++ b/diff/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="icon" type="image/png" sizes="64x64" href="./images/favicon.png">
+    <link rel="icon" type="image/png" sizes="64x64" href="/sc/images/favicon-diff-mn.png">
     <title>Sutta Diff</title>
     <link rel="stylesheet" href="style.css" />
 
@@ -76,19 +76,19 @@
             ><img width="20px" alt="Diff icon" src="/sc/images/favicon.png"></a>
 
         <a href="http://r.readingfaithfully.org" title="Random Suttas" rel="noreferrer" target="_blank"><img
-                width="20px" alt="Random Sutta icon" src="/sc/images/favicon-random-black.png"></a>
+                width="20px" alt="Random Sutta icon" src="/sc/images/favicon-random-white.png"></a>
         <a href="https://sutta.readingfaithfully.org" title="Citation Lookup Tool" rel="noreferrer" target="_blank"><img
-                width="20px" src="/sc/images/favicon-citaton-helper-black.png" alt="Citation Lookup tool icon"></a>
+                width="20px" src="/sc/images/favicon-citaton-helper-white.png" alt="Citation Lookup tool icon"></a>
         <a href="https://name.readingfaithfully.org" title="Search for suttas by name" rel="noreferrer"
-            target="_blank"><img width="20px" src="/sc/images/favicon-name-black.png" alt="Sutta Name Search icon"></a>
+            target="_blank"><img width="20px" src="/sc/images/favicon-name-white.png" alt="Sutta Name Search icon"></a>
         <a href="https://ped.readingfaithfully.org" title="A lightweight interface for the PED" rel="noreferrer"
-            target="_blank"><img width="20px" src="/sc/images/favicon-ped-black.png"
+            target="_blank"><img width="20px" src="/sc/images/favicon-ped-white.png"
                 alt="Lightweight interface icon"></a>
         <a href="https://dppn.readingfaithfully.org" title="A lightweight interface the Dictionary of Pali Proper Names"
-            rel="noreferrer" target="_blank"><img width="20px" src="/sc/images/favicon-dppn-black.png"
+            rel="noreferrer" target="_blank"><img width="20px" src="/sc/images/favicon-dppn-white.png"
                 alt="DPPN search icon"></a>
         <a href="https://github.com/o28o/mini-sc-pali#readme" title="The source code for this site" rel="noreferrer"
-            target="_blank"><img width="20px" src="/sc/images/GitHub-Mark-64px-black.png" alt="GitHub icon"></a>
+            target="_blank"><img width="20px" src="/sc/images/GitHub-Mark-64px-white.png" alt="GitHub icon"></a>
     </div>
     <script src="diff.js"></script>
     <script type="module" src="index.js"></script>
