--- a/diff/index.html
+++ b/diff/index.html
@@ -50,13 +50,13 @@
         <div id="sutta-one" class="sutta-area sutta-one">
             <form id="sutta-one-form"><input class="input-area" id="sutta-one-citation" type="text"
                     placeholder="Enter citation"><input class="go-button" type="submit" value="Load"><img id="trash-one"
-                    height="19px" class="icon-trash" src="./images/icon-trash.png"></form>
+                    height="19px" class="icon-trash" src="/sc/images/icon-trash.png"></form>
             <div id="sutta-one-content" class="content-area"></div>
         </div>
         <div id="sutta-two" class="sutta-area sutta-two">
             <form id="sutta-two-form"><input class="input-area" id="sutta-two-citation" type="text"
                     placeholder="Enter citation"><input class="go-button" type="submit" value="Load"><img id="trash-two"
-                    height="19px" class="icon-trash" src="./images/icon-trash.png"></form>
+                    height="19px" class="icon-trash" src="/sc/images/icon-trash.png"></form>
             <div id="sutta-two-content" class="content-area"></div>
         </div>
         <div id="comparison" class="sutta-area comparison">
@@ -73,7 +73,7 @@
       
 
 <a href="/sc/" title="SC Light" rel="noreferrer"
-            ><img width="20px" alt="Diff icon" src="/sc/images/favicon.png"></a>
+            ><img width="20px" alt="SC icon" src="/sc/images/favicon-sc-mn.png"></a>
 
         <a href="http://r.readingfaithfully.org" title="Random Suttas" rel="noreferrer" target="_blank"><img
                 width="20px" alt="Random Sutta icon" src="/sc/images/favicon-random-white.png"></a>
