--- a/qr/index.html
+++ b/qr/index.html
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
                 <a class="navbar-brand" href="/">find.dhamma.gift</a>
-              <a href="assets/vcard_Pavel_K.vcf" class="font-weight-bold bg-primary text-white rounded btn btn-primary text-decoration-none" href="#" role="button">vCard <i class="fa-regular fa-address-card"></i></a>
+              <a href="/assets/vcard_Pavel_K.vcf" class="font-weight-bold bg-primary text-white rounded btn btn-primary text-decoration-none" href="/assets/vcard_Pavel_K.vcf" role="button">vCard <i class="fa-regular fa-address-card"></i></a>
 
             </div>
         </nav>
@@ -31,7 +31,7 @@
                 <!-- Masthead Avatar Image-->
                <a href="/assets/vcard_Pavel_K.vcf"> <img class="masthead-avatar mt-5 mb-5" src="/assets/img/qr_Pavel_K.svg" alt="..." /></a>
                 <!-- Masthead Heading-->
-                <h1 class="masthead-heading text-uppercase mb-0">Pavel Katorgin</h1>
+                  <a class="text-decoration-none text-white" href="/assets/vcard_Pavel_K.vcf"> <h1 class="masthead-heading text-uppercase mb-0">Pavel Katorgin</h1></a>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
