--- a/sc/index.html
+++ b/sc/index.html
@@ -22,6 +22,7 @@
 
 <body class="dark">
     <form id="form">
+
         <input id="citation" type="text" placeholder="Enter citation"><input class="go-button" type="submit" value="Go">
         <div id="home-button" class="icon-button">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="body_1" width="20"
@@ -35,6 +36,10 @@
                 </g>
             </svg>
         </div>
+       <div style="margin:0px 3px;" id="fdg-button" class="icon-button">
+           <a  href="../" title="Sutta and Vinaya search" rel="noreferrer"
+            ><img width="15px" alt="find.dhamma.gift icon" src="/assets/gray.png"></a>
+      </div>
         <div id="theme-button" class="icon-button">
             <svg xmlns="http://www.w3.org/2000/svg" height="14" viewBox="0 0 24 24">
                 <path
