--- a/sc/index.html
+++ b/sc/index.html
@@ -38,7 +38,7 @@
         </div>
        <div style="margin:0px 3px;" id="fdg-button" class="icon-button">
            <a  href="../" title="Sutta and Vinaya search" rel="noreferrer"
-            ><img width="15px" alt="find.dhamma.gift icon" src="/assets/gray.png"></a>
+            ><img width="15px" alt="find.dhamma.gift icon" src="/assets/gray-white.png"></a>
       </div>
         <div id="theme-button" class="icon-button">
             <svg xmlns="http://www.w3.org/2000/svg" height="14" viewBox="0 0 24 24">
