--- a/scripts/scroll.html
+++ b/scripts/scroll.html
@@ -30,6 +30,11 @@ $('input').on('focus',function(){
 </head>
 <body>
 
+<script asyncstyle="width: 40%; margin: 0 auto"  src="https://cse.google.com/cse.js?cx=c184c71e0fe5d4c93"></script>
+<div class="gcse-search"></div>
+
+
+
 <div class="gdbox">
     <div id="gdb1" class="gdbutton fontwhitenshadow">Q</div>
     <input id="one" type="text"><br><br>
