update from server

--- a/sc/index.html
+++ b/sc/index.html
@@ -12,9 +12,10 @@
     <title>sc.Dhamma.gift</title>
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="sc light | find.Dhamma.gift" />
-    <meta property="og:description" content="An ultra lightweight interface for SuttaCentral." />
-    <meta property="og:url" content="https://sc.dhamma.gift/" />
+ <!--   <script>  var link = document.createElement('meta');  link.setAttribute('property', 'og:title');  link.content = document.title;  document.getElementsByTagName('head')[0].appendChild(link);</script> -->   
+  <meta property="og:title" content="sc light | find.Dhamma.gift" />
+ <meta property="og:description" content="An ultra fast and lightweight interface for SuttaCentral." />
+    <meta property="og:url" content="https://find.dhamma.gift/sc" />
     <meta property="og:site_name" content="sc.Dhamma.gift" />
     <meta property="og:image" itemprop="image"
         content="/favicon.png" />
