--- a/scripts/scroll.html
+++ b/scripts/scroll.html
@@ -27,8 +27,14 @@ $('input').on('focus',function(){
  });
 
   </script>
+  <script src="https://cdn.jsdelivr.net/gh/virtualvinodh/aksharamukha/aksharamukha-web-plugin/aksharamukha-v3.js?source=IASTPali&scriptlist=Thai,ISOPali,IASTPali,LaoPali,RussianCyrillic,Burmese,Devanagari&class=inputscript-IASTPali"></script>
+  
+  
+
+
 </head>
 <body>
+
 
 <script asyncstyle="width: 40%; margin: 0 auto"  src="https://cse.google.com/cse.js?cx=c184c71e0fe5d4c93"></script>
 <div class="gcse-search"></div>
